# dob-lib

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  LICENSE.md  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yaml  publish.yaml
src/dob/: action.py  bootstrap.py  freeze.py  main.py  run.py  utils.py
src/doblib/: __init__.py  __main__.py  action.py  aggregate.py  base.py  bootstrap.py  ci.py  env.py  freeze.py  main.py  migrate.py  module.py  run.py  utils.py
tests/: test_action.py  test_aggregate.py  test_bootstrap.py  test_ci.py  test_environment.py  test_freeze.py  test_main.py  test_migrate.py  test_module.py  test_run.py  test_utils.py
tests/environment/: odoo.default.yaml  odoo.local.yaml  odoo.project.yaml  odoo.yaml  post_update.py  post_update.sql
