[metadata]
name = doblib
version = attr: doblib.VERSION
author = initOS GmbH
author_email = info@initos.com
description = Management tool for Odoo installations
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
keywords = odoo environment management
url = https://github.com/initos/dob-lib
classifiers =
  Environment :: Console
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python :: 3

[options]
include_package_data = True
package_dir =
  = src
packages = find:
python_requires = >=3.6
install_requires =
  coverage
  git-aggregator
  ipython
  pylint_odoo
  python-dateutil
  pytest-cov
  pytest-odoo
  PyYAML

[options.entry_points]
console_scripts =
  dob = doblib.__main__:main

[options.extras_require]
no-ruff =
  black
  flake8
  isort>=4.3.10
ruff =
  ruff

[options.packages.find]
where = src
